Fixed Icon & Tag Overlapping on Mobile #1

--- a/css/app.css
+++ b/css/app.css
@@ -23,7 +23,7 @@ a {
   font-weight: 900;
   padding: 15px;
   position: fixed;
-  z-index: 998;
+  z-index: 1;
 }
 
 .wrapper__start-tag {
@@ -55,7 +55,7 @@ a {
   text-align: center;
   transform: translate(25%);
   width: 63%;
-  z-index: 999;
+  z-index: 2;
 }
 
 .app__header__pic {
@@ -125,7 +125,7 @@ a {
 
   .wrapper__end-tag,
   .wrapper__start-tag {
-    z-index: 999;
+    z-index: 2;
   }
 
 }
